Source/JavaScriptCore/wasm/WasmCompilationMode.h
@@ -36,6 +36,5 @@ enum class CompilationMode : uint8_t {
 };
 
 const char* makeString(CompilationMode);
-bool wasmFunctionSizeCanBeOMGCompiled(size_t);
 
 } } // namespace JSC::Wasm
